# imagedecoder-svg

./: CMakeLists.txt
imagedecoder.svg/: addon.xml.in
src/: SVGPicture.cpp
